# rustdiff

./: .gitignore  CLAUDE.md  Cargo.toml  KEY.asc  KEY.gpg  README.es.md  README.md  build.rs  cargo-sources.json  com.digitalgex.RustDiff.yaml  index.html  install.sh  rustfmt.toml
.github/workflows/: ci.yml  publish.yml  release-deb-apt.yml  release-flathub.yml  release-homebrew.yml  release-macos.yml
data/: com.digitalgex.RustDiff.desktop  com.digitalgex.RustDiff.metainfo.xml  rustdiff.desktop
data/screenshots/: README.md
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
dists/stable/main/binary-arm64/: Packages
docs/: DEBIAN_APT.md  RELEASE_NOTES_0.1.7.md
flathub/: README.md  com.digitalgex.RustDiff.yaml
locales/: en.yml  es.yml
pool/main/r/rustdiff/: rustdiff_0.1.7-1_amd64.deb  rustdiff_0.3.3-1_amd64.deb  rustdiff_0.3.3-1_arm64.deb
scripts/packaging/: build-apt-repo.sh  build-deb.sh  build-macos-app.sh
src/: app.rs  diff_engine.rs  export.rs  graph.rs  lib.rs  main.rs  parser.rs  settings.rs  storage.rs
src/ui/: diff_panel.rs  graph_view.rs  highlighter.rs  main_window.rs  mod.rs
tests/: diff_engine_tests.rs  graph_tests.rs  parser_tests.rs
