[package]
name = "rustdiff"
version = "0.1.0"
edition = "2024"
authors     = ["digitalgex <jpajro@digitalgex.com>"]
description = "Comparador semántico de JSON y XML — escritorio nativo con GTK4"
license     = "MIT"
readme      = "README.md"
# Rust mínimo recomendado para gtk4-rs 0.9 + libadwaita 0.7
rust-version = "1.85"
 
# ─────────────────────────────────────────────
# BINARIO PRINCIPAL
# ─────────────────────────────────────────────
[[bin]]
name = "rustdiff"
path = "src/main.rs"
 
# ─────────────────────────────────────────────
# DEPENDENCIAS DE PRODUCCIÓN
# ─────────────────────────────────────────────
[dependencies]

# ── UI / GTK ─────────────────────────────────
gtk4 = { version = "0.9", features = [
    "v4_12",          # widgets modernos (ColumnView, etc.)
] }
libadwaita = { version = "0.7", features = [
    "v1_5",           # AdwToolbarView, breakpoints responsivos
] }
# Editor con syntax-highlighting nativo de GNOME
sourceview5 = { version = "0.9" }
 
# ── SERIALIZACIÓN / PARSEO ───────────────────
serde      = { version = "1",    features = ["derive"] }
serde_json = { version = "1" }
# XML rápido: parsing + pretty-print sin dependencias C
quick-xml  = { version = "0.36", features = ["serialize", "async-tokio"] }
 
# ── MOTOR DE DIFF ────────────────────────────
# Algoritmo Myers/LCS — el mismo que usa `git diff`
similar = { version = "2", features = ["text", "unicode"] }
 
# ── PERSISTENCIA SSD (SQLite embebido) ───────
# "bundled" compila SQLite dentro del binario (sin dep. externa)
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
 
# ── ASYNC (parseo en hilo separado sin bloquear UI) ──
tokio = { version = "1", features = [
    "rt",             # runtime básico
    "rt-multi-thread",
    "fs",             # lectura async de archivos
    "time",           # debounce timer
    "macros",         # #[tokio::main]
] }
 
# ── UTILIDADES ───────────────────────────────
# Rutas de datos de usuario multiplataforma (~/.local/share, etc.)
dirs        = "5"
# Logging estructurado
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
# Manejo ergonómico de errores
thiserror   = "1"
anyhow      = "1"
# Notificaciones al usuario (Gtk toast / system notification)
notify-rust = { version = "4", optional = true }
 
# ─────────────────────────────────────────────
# DEPENDENCIAS SOLO EN TESTS / BENCHMARKS
# ─────────────────────────────────────────────
[dev-dependencies]
# Fixtures de prueba y asserts expresivos
pretty_assertions = "1"
# Genera datos JSON / XML aleatorios para fuzzing básico
arbitrary         = { version = "1", features = ["derive"] }
 
# ─────────────────────────────────────────────
# FEATURES OPCIONALES
# ─────────────────────────────────────────────
[features]
default     = []
# Activa notificaciones de escritorio del SO
notifications = ["notify-rust"]
# Modo verbose para desarrollo (activa más trazas)
dev         = []
 
# ─────────────────────────────────────────────
# PERFIL RELEASE — máximo rendimiento + binario pequeño
# ─────────────────────────────────────────────
[profile.release]
opt-level     = 3          # optimización máxima
lto           = "thin"     # Link-Time Optimization (más rápido que "fat")
codegen-units = 1          # un solo codegen-unit = mejor inlining
strip         = "symbols"  # elimina símbolos de debug del binario
panic         = "abort"    # binario más pequeño, sin stack unwinding
 
# ─────────────────────────────────────────────
# PERFIL DE DESARROLLO — builds rápidos
# ─────────────────────────────────────────────
[profile.dev]
opt-level     = 1          # algo de optimización para que GTK no sea lento
debug         = true
incremental   = true       # compilación incremental (más rápido en cambios)
 
# ─────────────────────────────────────────────
# METADATA (útil para empaquetado .deb / flatpak)
# ─────────────────────────────────────────────
[package.metadata.deb]
maintainer   = "jpajro <jpajaro@diogitalgex.com>"
copyright    = "2026, digitalgex"
license-file = ["LICENSE", "4"]
extended-description = """
RustDiff es un comparador semántico de JSON y XML.
Muestra las diferencias entre dos documentos de forma visual,
resaltando añadidos, eliminados y modificados con colores.
"""
depends      = "$auto, libgtk-4-1, libadwaita-1-0"
section      = "utils"
priority     = "optional"
assets = [
    ["target/release/rustdiff", "usr/bin/",              "755"],
    ["data/rustdiff.desktop",   "usr/share/applications/", "644"],
    ["data/icons/rustdiff.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
]

