# Copyright 2026 the rustdiff authors
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#
# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "rustdiff"
version = "0.1.0"
edition = "2024"
authors     = ["digitalgex <jpajro@digitalgex.com>"]
description = "Comparador semántico de JSON y XML — escritorio nativo con GTK4"
license     = "GPL-3.0-or-later"
readme      = "README.md"
rust-version = "1.85"
 
# ─────────────────────────────────────────────
# BINARIO PRINCIPAL
# ─────────────────────────────────────────────
[[bin]]
name = "rustdiff"
path = "src/main.rs"
 
# ─────────────────────────────────────────────
# DEPENDENCIAS DE PRODUCCIÓN
# ─────────────────────────────────────────────
[dependencies]

gtk4 = { version = "0.9", features = [
    "v4_12",          ] }
libadwaita = { version = "0.7", features = [
    "v1_5",           ] }
sourceview5 = { version = "0.9" }
 
# ── SERIALIZACIÓN / PARSEO ───────────────────
serde      = { version = "1",    features = ["derive"] }
serde_json = { version = "1" }
quick-xml  = { version = "0.36", features = ["serialize", "async-tokio"] }
 
# ── MOTOR DE DIFF ────────────────────────────
similar = { version = "2", features = ["text", "unicode"] }
 
# ── PERSISTENCIA SSD (SQLite embebido) ───────
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
 
# ── ASYNC (parseo en hilo separado sin bloquear UI) ──
tokio = { version = "1", features = [
    "rt",             # runtime básico
    "rt-multi-thread",
    "fs",             # lectura async de archivos
    "time",           # debounce timer
    "macros",         # #[tokio::main]
] }
 
# ── UTILIDADES ───────────────────────────────
dirs        = "5"
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
thiserror   = "1"
anyhow      = "1"
notify-rust = { version = "4", optional = true }
 
# ─────────────────────────────────────────────
# DEPENDENCIAS SOLO EN TESTS / BENCHMARKS
# ─────────────────────────────────────────────
[dev-dependencies]
pretty_assertions = "1"
arbitrary         = { version = "1", features = ["derive"] }
 
# ─────────────────────────────────────────────
# FEATURES OPCIONALES
# ─────────────────────────────────────────────
[features]
default     = []
notifications = ["notify-rust"]
dev         = []
 
# ─────────────────────────────────────────────
# PERFIL RELEASE — máximo rendimiento + binario pequeño
# ─────────────────────────────────────────────
[profile.release]
opt-level     = 3          # optimización máxima
lto           = "thin"     # Link-Time Optimization (más rápido que "fat")
codegen-units = 1          # un solo codegen-unit = mejor inlining
strip         = "symbols"  # elimina símbolos de debug del binario
panic         = "abort"    # binario más pequeño, sin stack unwinding
 
# ─────────────────────────────────────────────
# PERFIL DE DESARROLLO — builds rápidos
# ─────────────────────────────────────────────
[profile.dev]
opt-level     = 1          # algo de optimización para que GTK no sea lento
debug         = true
incremental   = true       # compilación incremental (más rápido en cambios)
 
# ─────────────────────────────────────────────
# METADATA (útil para empaquetado .deb / flatpak)
# ─────────────────────────────────────────────
[package.metadata.deb]
maintainer   = "jpajaro <jpajaro@diogitalgex.com>"
copyright    = "2026, digitalgex"
license-file = ["LICENSE", "4"]
extended-description = """
RustDiff es un comparador semántico de JSON y XML.
Muestra las diferencias entre dos documentos de forma visual,
resaltando añadidos, eliminados y modificados con colores.
"""
depends      = "$auto, libgtk-4-1, libadwaita-1-0"
section      = "utils"
priority     = "optional"
assets = [
    ["target/release/rustdiff", "usr/bin/",              "755"],
    ["data/rustdiff.desktop",   "usr/share/applications/", "644"],
    ["data/icons/rustdiff.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
]

